WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204036
Fail cross-origin redirection loads in case of CORS with redirection URLs having credentials
https://bugs.webkit.org/show_bug.cgi?id=204036
Summary
Fail cross-origin redirection loads in case of CORS with redirection URLs hav...
youenn fablet
Reported
2019-11-08 17:40:15 PST
Fail cross-origin redirection loads in case of CORS with redirection URLs having credentials
Attachments
Patch
(63.06 KB, patch)
2019-11-08 17:41 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(137.72 KB, patch)
2019-11-09 06:49 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(140.69 KB, patch)
2019-11-09 07:28 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(139.59 KB, patch)
2019-11-09 07:59 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(144.64 KB, patch)
2019-11-10 08:46 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-11-08 17:41:47 PST
Created
attachment 383187
[details]
Patch
youenn fablet
Comment 2
2019-11-09 06:49:51 PST
Created
attachment 383215
[details]
Patch
youenn fablet
Comment 3
2019-11-09 07:28:42 PST
Created
attachment 383216
[details]
Patch
youenn fablet
Comment 4
2019-11-09 07:59:13 PST
Created
attachment 383218
[details]
Patch
youenn fablet
Comment 5
2019-11-10 08:46:39 PST
Created
attachment 383247
[details]
Patch
WebKit Commit Bot
Comment 6
2019-11-11 17:27:53 PST
Comment on
attachment 383247
[details]
Patch Clearing flags on attachment: 383247 Committed
r252348
: <
https://trac.webkit.org/changeset/252348
>
WebKit Commit Bot
Comment 7
2019-11-11 17:27:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2019-11-11 17:28:17 PST
<
rdar://problem/57100220
>
youenn fablet
Comment 9
2020-01-03 01:35:12 PST
***
Bug 169540
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug