Fail cross-origin redirection loads in case of CORS with redirection URLs having credentials https://bugs.webkit.org/show_bug.cgi?id=204036

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/cors/redirect-userinfo-expected.txt:
* web-platform-tests/fetch/api/cors/cors-redirect-credentials.any-expected.txt:
* web-platform-tests/fetch/api/cors/cors-redirect-credentials.any.worker-expected.txt:
* web-platform-tests/fetch/api/redirect/redirect-location.any-expected.txt:
* web-platform-tests/fetch/api/redirect/redirect-location.any.worker-expected.txt:
* web-platform-tests/fetch/api/redirect/redirect-schemes-expected.txt:
* web-platform-tests/fetch/api/redirect/redirect-to-dataurl.any-expected.txt:
* web-platform-tests/fetch/api/redirect/redirect-to-dataurl.any.worker-expected.txt:
* web-platform-tests/fetch/security/redirect-to-url-with-credentials.https-expected.txt:
* web-platform-tests/service-workers/service-worker/fetch-event-redirect.https-expected.txt:
* web-platform-tests/xhr/access-control-and-redirects-async-expected.txt:

Source/WebCore:

Update checks in SubresourceLoader according networking process.
Make error messages consistent,
Test: http/tests/navigation/page-cache-mediastream.html

* loader/CrossOriginAccessControl.cpp:
(WebCore::validateCrossOriginRedirectionURL):
(WebCore::isValidCrossOriginRedirectionURL): Deleted.
* loader/CrossOriginAccessControl.h:
* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::didReceiveResponse):
(WebCore::SubresourceLoader::checkRedirectionCrossOriginAccessControl):

Source/WebKit:

Implement https://fetch.spec.whatwg.org/#http-redirect-fetch steps 7 and 8.
Covered by updated tests.

* NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::checkRedirection):

LayoutTests:

* http/tests/security/shape-image-cors-redirect-error-message-logging-4-expected.txt:
* http/tests/xmlhttprequest/access-control-and-redirects-async-expected.txt:
* http/tests/xmlhttprequest/access-control-and-redirects-async.html:


Canonical link: https://commits.webkit.org/217403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252348 268f45cc-cd09-0410-ab3c-d52691b4dbfc